--- a/src/components/CardDesign/CardDesign.css
+++ b/src/components/CardDesign/CardDesign.css
@@ -1,9 +1,10 @@
 .card-container {
     width: 100%;
+     /* padding: 30px 200px 50px 200px; */
 }
 
 .card-contents {
-    width: 300px;
+    width: 320px;
     height: 400px;
     border-radius: 12px;
     border: 1px solid #CFCFCF;
