--- a/src/components/Sticker/Sticker.css
+++ b/src/components/Sticker/Sticker.css
@@ -3,12 +3,12 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 30px 250px 50px 250px;
+    padding: 30px 200px 50px 200px;
     background: linear-gradient(to bottom, #FFFFFF 50%, #F4F7FB 50%);
 }
 
 .sticker-container img {
-    width: 1200px;
+    width: 1400px;
     height: 250px;
 }
 
@@ -48,13 +48,16 @@
 }
 
 @media (max-width: 600px) {
+    .sticker-container {
+        padding: 0px 0px 0px 0px;
+    }
     .sticker-container img {
         width: 600px;
         height: 180px;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 500px) {
     .sticker-container img {
         width: 500px;
     }
