--- a/src/components/CardDesign/CardDesign.css
+++ b/src/components/CardDesign/CardDesign.css
@@ -4,7 +4,7 @@
 
 .card-contents {
     width: 320px;
-    height: 400px;
+    height: 420px;
     border-radius: 12px;
     border: 1px solid #CFCFCF;
     padding: 10px;
@@ -50,6 +50,16 @@
 
 .card-heading {
     border-bottom: 1px solid #D9D9D9;
+}
+
+.card-heading p {
+    font-weight: 400;
+    font-style: normal;
+    font-size: 14px;
+    line-height: 120%;
+    letter-spacing: 0;
+    color: #7258F0;
+    margin: 5px 0;
 }
 
 .card-heading h3 {
